added combine method for token definitions